--- a/app/globals.css
+++ b/app/globals.css
@@ -186,11 +186,8 @@
   font-weight: 600;
   padding: 8px 24px;
 
-     clip-path: polygon(
-    0% 0%,      
-    100% 0%,   
-    92% 100%,   
-    8% 100%    
-  );
+  clip-path: polygon(0% 0%,
+      100% 0%,
+      92% 100%,
+      8% 100%);
 }
-
